[package]
name = "reaccionar"
version = "0.1.0"
authors = ["Ian Reese <kalissaac@protonmail.com>", "The Code Weaver <thecodeweaver27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
dotenv = "0.15.0"
redis = "*"
rocket = "0.4.5"
reqwest = { version = "0.10", features = [] }
openssl = { version = "0.10.29", features = ["vendored"] }
